# helloquick

./: .gitignore  CMakeLists.txt  Descriptors.cpp  Descriptors.h  common.h  debug.bat  main.cpp  mytest.cpp  mytest.h  qml.qrc  quick_node.cpp  quick_node.h  quick_parameter.cpp  quick_parameter.h  selfdefinedqmltype.cpp  selfdefinedqmltype.h  znodeitem.cpp  znodeitem.h  zparamitem.cpp  zparamitem.h
GraphEditorDemo/: CMakeLists.txt  Edge.qml  GraphEditor.qml  debug.bat  main.cpp  main.qml  qml.qrc
models/: Descriptors.cpp  Descriptors.h  NodesModel.cpp  NodesModel.h  ParamsModel.cpp  ParamsModel.h
qml/: CheckBox_TriangleTest.qml  Edge.qml  FixSpacer.qml  Graph.qml  GraphEditor.qml  Socket.qml  StatusBtn.qml  StatusBtnGroup.qml  TreeviewTest.qml  ZNode.qml  ZParam.qml  dialogTest.qml  main.qml  rect.qml  scrollViewTest.qml  testNode.qml  testParam.qml
qml/controls/: VecEdit.qml  ZLineEditor.qml  ZTextEditor.qml  ZVec2Editor.qml  ZVec3Editor.qml  ZVec4Editor.qml
res/: icons.qrc
